tests/test_proof/bad/output/dates_simple-empty.catala_en.Proof
[ERROR] The translation to Z3 failed:
TODO
[ERROR] The translation to Z3 failed:
TODO
[RESULT] [A.x] This variable never returns an empty error
[RESULT] [A.x] No two exceptions to ever overlap for this variable
